--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <title>Index</title>
 <ul>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
+  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
 </ul>
