--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <title>Index</title>
+<style>
+  :root { font: 200%/1.6 sans-serif; }
+</style>
 <ul>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
