--- a/missing-meta-charset.html
+++ b/missing-meta-charset.html
@@ -3,6 +3,14 @@
 <link rel="canonical" href="https://mathiasbynens.be/demo/missing-meta-charset">
 <meta http-equiv="refresh" content="0;URL=https://mathiasbynens.be/demo/missing-meta-charset">
 <!-- Note: intentionally no meta charset. -->
+<style>
+  :root { font: 1rem/1.6 sans-serif; }
+</style>
 <script>document.write(document.charset);</script>
-Iñtërnâtiônàlizætiøn☃💩
+<ul>
+  <li>🏡 Home
+  <li>📚 Books
+  <li>☎️ Contact
+  <li>🎌 Iñtërnâtiônàlizætiøn☃
+</ul>
 <script>document.write(document.charset);</script>
