Explicitly add <body>

--- a/late-meta-charset.html
+++ b/late-meta-charset.html
@@ -7,11 +7,12 @@
 <style>
   :root { font: 1rem/1.6 sans-serif; }
 </style>
-<script>document.write(document.charset);</script>
-<ul>
-  <li>🏡 Home
-  <li>📚 Books
-  <li>☎️ Contact
-  <li>🎌 Iñtërnâtiônàlizætiøn☃
-</ul>
-<script>document.write(document.charset);</script>
+<body>
+  <script>document.write(document.charset);</script>
+  <ul>
+    <li>🏡 Home
+    <li>📚 Books
+    <li>☎️ Contact
+    <li>🎌 Iñtërnâtiônàlizætiøn☃
+  </ul>
+  <script>document.write(document.charset);</script>
