--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   :root { font: 200%/1.6 sans-serif; }
 </style>
 <ul>
+  <li><a href="background-image.html"><code>background-image.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
-  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
+  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
 </ul>
