Make image smaller than background image

--- a/background-image.html
+++ b/background-image.html
@@ -2,6 +2,6 @@
 <meta charset="utf-8">
 <title>Background image</title>
 <style>
-  :root { font: 1rem/1.6 sans-serif; background: url(https://v8.dev/_img/v8-outline.svg) no-repeat; }
+  :root { font: 1rem/1.6 sans-serif; background: url(https://v8.dev/_img/v8-outline.svg) no-repeat; min-height: 256px; }
 </style>
-<img src="https://v8.dev/_img/v8-outline.svg" width="256" height="256" alt="">
+<img src="https://v8.dev/_img/v8-outline.svg" width="100" height="100" alt="">
