--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   :root { font: 200%/1.6 sans-serif; }
 </style>
 <ul>
+  <li><a href="background.html"><code>background.html</code></a>
   <li><a href="background-image.html"><code>background-image.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
