--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <li><a href="background.html"><code>background.html</code></a>
   <li><a href="background-image.html"><code>background-image.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
+  <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
