Add some single-char CSS escapes

--- a/css-escapes.html
+++ b/css-escapes.html
@@ -2,6 +2,6 @@
 <title>Demo</title>
 <style>
   :root { font: 1rem/1.6 sans-serif; }
-  p::after { content: 'I\F1 t\EB rn\E2 ti\F4 n\E0 liz\E6 ti\F8 n\2603 \1F308  can be tricky'; }
+  p::after { content: 'I\F1 t\EB rn\E2 ti\F4 n\E0 liz\E6 ti\F8 n\2603 \1F308  can be \t\r\ic\k\y'; }
 </style>
 <p>
