--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
-  <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a></a>
+  <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
+  <li><a href="font-stack.html"><code>font-stack.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
 </ul>
