--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
+  <li><a href="css-svg-filters.html"><code>css-svg-filters.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
