--- a/css-grid.html
+++ b/css-grid.html
@@ -214,7 +214,8 @@
   </section>
 
   <section class="example real-world">
-    <header class="example-title">Real World #3: </header>
+    <header class="example-title">Real World #3: Warner Brothers Studios Leavesden</header>
+    <iframe src="https://www.wbsl.com/"></iframe>
     <div class="note"></div>
   </section>
 </body>
