--- a/color-vision-deficiency.html
+++ b/color-vision-deficiency.html
@@ -5,5 +5,5 @@
   #example-1 { background: #A8A800; color: #FF5703; }
   #example-2 { background: #F1F100; color: #6AFF00; }
 </style>
-<p id="example-1">This paragraph's background/text colors have terrible contrast for people with deuteranopia.</p>
+<p id="example-1">This paragraph's background/text colors have terrible contrast for people with achromatomaly.</p>
 <p id="example-2">And this one too!</p>
