--- a/color-vision-deficiency.html
+++ b/color-vision-deficiency.html
@@ -4,6 +4,8 @@
   :root { font: 5rem/1.6 sans-serif; }
   #example-1 { background: #A8A800; color: #FF5703; }
   #example-2 { background: #F1F100; color: #6AFF00; }
+  #example-3 { background: #DDD068; color: #F4AD88; }
 </style>
-<p id="example-1">This paragraph’s background/text colors have terrible contrast for people with achromatomaly.</p>
-<p id="example-2">And this one too!</p>
+<p id="example-1">This paragraph’s background/text colors have terrible contrast for people with protanopia or achromatomaly.</p>
+<p id="example-2">This one too.</p>
+<p id="example-3">And this one too!</p>
