Add Ishihara test
Generated using the excellent tool at https://franciscouzo.github.io/ishihara/ with the following settings:

```
{
  "remembered": {
    "General 1": {
      "0": {
        "circular": true,
        "resize": true,
        "edge_detection": true,
        "invert_colors": false,
        "shape_factory": "Circle",
        "sides": 4,
        "pointiness": 0.75,
        "n_colors_on": 3,
        "n_colors_off": 6,
        "color_on0": "#F9BB82",
        "color_off0": "#9CA594",
        "color_on1": "#EBA170",
        "color_off1": "#ACB4A5",
        "color_on2": "#FCCD84",
        "color_off2": "#BBB964",
        "color_on3": "#000000",
        "color_off3": "#D7DAAA",
        "color_on4": "#000000",
        "color_off4": "#E5D57D",
        "color_on5": "#000000",
        "color_off5": "#D1D6AF",
        "min_radius": 7.46,
        "max_radius": 29.84,
        "draw_ratio": 1,
        "stop_after": 10000
      }
    },
    "General 2": [
      {
        "n_colors_on": 5,
        "n_colors_off": 4,
        "color_on0": "#89B270",
        "color_on1": "#7AA45E",
        "color_on2": "#B6C674",
        "color_on3": "#7AA45E",
        "color_on4": "#B6C674",
        "color_off0": "#F49427",
        "color_off1": "#C9785D",
        "color_off2": "#E88C6A",
        "color_off3": "#F1B081"
      }
    ],
    "General 3": [
      {
        "n_colors_on": 6,
        "n_colors_off": 5,
        "color_on0": "#89B270",
        "color_on1": "#7AA45E",
        "color_on2": "#B6C674",
        "color_on3": "#7AA45E",
        "color_on4": "#B6C674",
        "color_on5": "#FECB05",
        "color_off0": "#F49427",
        "color_off1": "#C9785D",
        "color_off2": "#E88C6A",
        "color_off3": "#F1B081",
        "color_off4": "#FFCE00"
      }
    ],
    "Protanopia": [
      {
        "n_colors_on": 2,
        "n_colors_off": 3,
        "color_on0": "#E96B6C",
        "color_on1": "#F7989C",
        "color_off0": "#635A4A",
        "color_off1": "#817865",
    

--- a/color-vision-deficiency.html
+++ b/color-vision-deficiency.html
@@ -8,4 +8,7 @@
 </style>
 <p id="example-1">This paragraph’s background/text colors have terrible contrast for people with protanopia or achromatomaly.</p>
 <p id="example-2">This one too.</p>
-<p id="example-3">And this one too!</p>
+<p id="example-3">This one has bad contrast with pretty much any color vision deficiency. Try protanopia, deuteranopia, and tritanopia.</p>
+<figure>
+  <img src="ishihara-42.svg" width="600" height="496" alt="Ishihara color vision deficiency test image">
+</figure>
