--- a/color-vision-deficiency.html
+++ b/color-vision-deficiency.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Demo</title>
+<title>Color vision deficiency demo</title>
 <style>
   :root { font: 5rem/1.6 sans-serif; }
   #example-1 { background: #A8A800; color: #FF5703; }
@@ -9,6 +9,5 @@
 <p id="example-1">This paragraph’s background/text colors have terrible contrast for people with protanopia or achromatomaly.</p>
 <p id="example-2">This one too.</p>
 <p id="example-3">This one has bad contrast with pretty much any color vision deficiency. Try protanopia, deuteranopia, and tritanopia.</p>
-<figure>
-  <img src="ishihara-42.svg" width="600" height="496" alt="Ishihara color vision deficiency test image">
-</figure>
+<figure><img src="ishihara-42.svg" width="600" height="599" alt="Ishihara color vision deficiency test image"></figure>
+<figure><img src="ishihara-ji.svg" width="600" height="602" alt="Ishihara color vision deficiency test image"></figure>
