Add `revert` demo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <li><a href="css-grid.html"><code>css-grid.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
+  <li><a href="css-revert.html"><code>css-revert.html</code></a>
   <li><a href="css-svg-filter-1.html"><code>css-svg-filter-1.html</code></a> + <a href="css-svg-filter-2.html"><code>css-svg-filter-2.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
+  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
-  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="variable-font.html"><code>variable-font.html</code></a>
 </ul>
