Add a test page for color functional syntax

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <li><a href="background.html"><code>background.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
   <li><a href="css-color.html"><code>css-color.html</code></a>
+  <li><a href="css-color-functional-whitespace-syntax.html"><code>css-color-functional-whitespace-syntax.html</code></a>
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-grid.html"><code>css-grid.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
