--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
+  <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
   <li><a href="variable-font.html"><code>variable-font.html</code></a>
 </ul>
