Background zoom issue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <li><a href="background-image.html"><code>background-image.html</code></a>
   <li><a href="background.html"><code>background.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
+  <li><a href="css-background-zoom.html"><code>css-background-zoom.html</code></a>
   <li><a href="css-color.html"><code>css-color.html</code></a>
   <li><a href="css-color-functional-whitespace-syntax.html"><code>css-color-functional-whitespace-syntax.html</code></a>
   <li><a href="css-color-paste.html"><code>css-color-paste.html</code></a>
