--- a/css-background-zoom.html
+++ b/css-background-zoom.html
@@ -12,7 +12,7 @@
   }
   input:checked {
     background: url("data:image/svg+xml;utf8,<svg viewBox='0 0 9 9' xmlns='http://www.w3.org/2000/svg'><circle cx='4.5' cy='4.5' r='4.5'/></svg>") center no-repeat;
-    background-size: 9px 9px;
+    background-size: 0.5625rem 0.5625rem;
   }
   input:focus {
     outline-width: 0;
