Add vertical grid example

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <li><a href="css-color-paste.html"><code>css-color-paste.html</code></a>
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-grid.html"><code>css-grid.html</code></a>
+  <li><a href="css-grid-vertical.html"><code>css-grid-vertical.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
   <li><a href="css-revert.html"><code>css-revert.html</code></a>
