--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@
   <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
   <li><a href="variable-font.html"><code>variable-font.html</code></a>
+  <li><a href="v8-compilation-cache.html"><code>v8-compilation-cache.html</code></a>
 </ul>
