Add module example

--- a/v8-compilation-cache.html
+++ b/v8-compilation-cache.html
@@ -6,4 +6,7 @@
 <script src="https://unpkg.com/mitt/dist/mitt.umd.js"></script>
 
 <!-- A large enough script that should be code-cachable: -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js?script"></script>
+
+<!-- A large enough module that should be code-cachable: -->
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js?module"></script>
