--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="css-svg-filter-1.html"><code>css-svg-filter-1.html</code></a> + <a href="css-svg-filter-2.html"><code>css-svg-filter-2.html</code></a>
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
+  <li><a href="idle-detector.html"><code>idle-detector.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
