--- a/idle-detector.html
+++ b/idle-detector.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<meta http-equiv="origin-trial" content="AguTVwSEBWefpr8EO7VDG/hIsTlPnejeHfFx7VUmYHm88rSuXnind5pGFWAsdk9YBPp7wE6AuPPUUwzgLrqoKwEAAABeeyJvcmlnaW4iOiJodHRwczovL21hdGhpYXNieW5lbnMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJJZGxlRGV0ZWN0aW9uIiwiZXhwaXJ5IjoxNTk4MDEwNTAwfQ==">
 <title>Demo</title>
+<h3>Enable the #enable-experimental-web-platform-features flag in chrome://flags</h3>
 <div id="status"></div>
 <div id="error"></div>
 <script>
@@ -21,7 +23,9 @@
         signal,
       });
       idleDetector.addEventListener('change', (e) => {
-        document.getElementById('status').textContent += JSON.stringify(e);
+        const userState = idleDetector.userState;
+        const screenState = idleDetector.screenState;
+        document.getElementById('status').textContent += `Idle change: ${userState}, ${screenState}.`;
         document.getElementById('status').appendChild(document.createElement('br'));
       });
       await idleDetector.start();
