--- a/image-fallback.html
+++ b/image-fallback.html
@@ -3,21 +3,21 @@
 
 <h2>avif -> webp -> png</h2>
 <picture>
-  <source srcset="/images/test.avif" type="image/avif">
-  <source srcset="/images/test.webp" type="image/webp">
-  <img src="/images/test.png">
+  <source srcset="images/test.avif" type="image/avif">
+  <source srcset="images/test.webp" type="image/webp">
+  <img src="images/test.png">
 </picture>
 
 <h2>not actually avif -> webp -> png</h2>
 <picture>
-  <source srcset="/images/test.fake.avif" type="image/avif">
-  <source srcset="/images/test.webp" type="image/webp">
-  <img src="/images/test.png">
+  <source srcset="images/test.fake.avif" type="image/avif">
+  <source srcset="images/test.webp" type="image/webp">
+  <img src="images/test.png">
 </picture>
 
 <h2>not found -> webp -> png</h2>
 <picture>
-  <source srcset="/images/missing.avif" type="image/avif">
-  <source srcset="/images/test.webp" type="image/webp">
-  <img src="/images/test.png">
+  <source srcset="images/missing.avif" type="image/avif">
+  <source srcset="images/test.webp" type="image/webp">
+  <img src="images/test.png">
 </picture>
