Add broken avif to test decoding errors

--- a/image-fallback.html
+++ b/image-fallback.html
@@ -21,3 +21,10 @@
   <source srcset="images/test.webp" type="image/webp">
   <img src="images/test.png">
 </picture>
+
+<h2>decode failure -> webp -> png</h2>
+<picture>
+  <source srcset="images/broken.avif" type="image/avif">
+  <source srcset="images/test.webp" type="image/webp">
+  <img src="images/test.png">
+</picture>
