Missing image types

--- a/image-fallback.html
+++ b/image-fallback.html
@@ -28,3 +28,10 @@
   <source srcset="images/test.webp" type="image/webp">
   <img src="images/test.png">
 </picture>
+
+<h2>avif -> webp -> png (no image types)</h2>
+<picture>
+  <source srcset="images/test.avif">
+  <source srcset="images/test.webp">
+  <img src="images/test.png">
+</picture>
