Missing image types

--- a/image-fallback.html
+++ b/image-fallback.html
@@ -31,7 +31,7 @@
 
 <h2>avif -> webp -> png (no image types)</h2>
 <picture>
-  <source srcset="images/test.avif">
-  <source srcset="images/test.webp">
-  <img src="images/test.png">
+  <source srcset="images/test.avif?notype">
+  <source srcset="images/test.webp?notype">
+  <img src="images/test.png?notype">
 </picture>
