Add css example

--- a/image-fallback.html
+++ b/image-fallback.html
@@ -48,3 +48,6 @@
 
 <h2>existing avif img with on error fallback to png</h2>
 <img src="images/test.avif?error-fallback" onerror="src='images/test.png?error-fallback'">
+
+<h2>image via CSS</h2>
+<div style="background: url(images/test.avif?css); width: 100px; height: 100px;"></div>
