--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
   <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
+  <li><a href="target.html"><code>target.html</code></a>
+  <li><a href="target-text.html"><code>target-text.html</code></a>
   <li><a href="variable-font.html"><code>variable-font.html</code></a>
   <li><a href="v8-compilation-cache.html"><code>v8-compilation-cache.html</code></a>
 </ul>
