--- a/css-color.html
+++ b/css-color.html
@@ -22,6 +22,7 @@
   @supports (color: color(srgb 0.41587 0.503670 0.36664)) { #srgb { background: var(--green); } }
   @supports (color: lab(51.2345% -13.6271 16.2401)) { #lab { background: var(--green); } }
   @supports (color: lch(51.2345% 21.2 130)) { #lch { background: var(--green); } }
+  @supports (color: color(xyz 0.1625 0.1947 0.1022)) { #xyz { background: var(--green); } }
 </style>
 <h1>CSS color features</h1>
 <h2>Supported color gamuts</h2>
@@ -47,4 +48,5 @@
   <li id="srgb"><code>color: color(srgb 0.41587 0.503670 0.36664);</code>
   <li id="lab"><code>color: lab(51.2345% -13.6271 16.2401);</code>
   <li id="lch"><code>color: lch(51.2345% 21.2 130);</code>
+  <li id="xyz"><code>color: color(xyz 0.1625 0.1947 0.1022);</code>
 </ul>
